--- a/corprules.in
+++ b/corprules.in
@@ -3096,9 +3096,10 @@ KERNEL_MODULE			KERNEL_MODULE_UM
 KERNEL_MODULE			SCI_MATH_ADJ KERNEL_MODULE_UM
 
 COMPILED		compiled
-COMPILED		hand hex-editted
+COMPILED		hand hex-edtted
 COMPILED		linked
 COMPILED		hand assembled
+COMPILED		painstakingly crafted
 
 TOOLCHAIN		GCC VERSION
 TOOLCHAIN		EXP_WHOSE compiler
@@ -6704,37 +6705,37 @@ MONEH DOLL$NONZ\commaDIGITDIGITDIGIT$ PERUNIT COSTITEMS
 
 #6 SECTORS
 PIELIST+30 15.0/FTOPIC/1,17.0/FTOPIC/-1,16.0/FTOPIC/1,17.0/FTOPIC/-1,19.0/FTOPIC/1,16.0/FTOPIC/-1
-PIELIST+30 15.0/FMTOPIC/1,17.0/FMTOPIC/-1,16.0/FMTOPIC/1,17.0/FMTOPIC/-1,19.0/FMTOPIC/1,16.0/FMTOPIC/-1
+PIELIST+7 15.0/FMTOPIC/1,17.0/FMTOPIC/-1,16.0/FMTOPIC/1,17.0/FMTOPIC/-1,19.0/FMTOPIC/1,16.0/FMTOPIC/-1
 
 #5 SECTORS
 PIELIST+30 22.0/FTOPIC/1,24.0/FTOPIC/-1,21.0/FTOPIC/1,25.0/FTOPIC/-1,8.0/FTOPIC/0
-PIELIST+30 22.0/FMTOPIC/1,24.0/FMTOPIC/-1,21.0/FMTOPIC/1,25.0/FMTOPIC/-1,8.0/FMTOPIC/0
+PIELIST+7 22.0/FMTOPIC/1,24.0/FMTOPIC/-1,21.0/FMTOPIC/1,25.0/FMTOPIC/-1,8.0/FMTOPIC/0
 
 PIELIST+30 20.5/FTOPIC/-1,23.5/FTOPIC/1,22.5/FTOPIC/-1,24.5/FTOPIC/0,9.0/FTOPIC/1
-PIELIST+30 20.5/FMTOPIC/-1,23.5/FMTOPIC/1,22.5/FMTOPIC/-1,24.5/FMTOPIC/0,9.0/FMTOPIC/1
+PIELIST+7 20.5/FMTOPIC/-1,23.5/FMTOPIC/1,22.5/FMTOPIC/-1,24.5/FMTOPIC/0,9.0/FMTOPIC/1
 
 PIELIST+30 25.0/FTOPIC/1,21.0/FTOPIC/-1,24.0/FTOPIC/0,23.0/FTOPIC/1,7.0/FTOPIC/-1
-PIELIST+30 25.0/FMTOPIC/1,21.0/FMTOPIC/-1,24.0/FMTOPIC/0,23.0/FMTOPIC/1,7.0/FMTOPIC/-1
+PIELIST+7 25.0/FMTOPIC/1,21.0/FMTOPIC/-1,24.0/FMTOPIC/0,23.0/FMTOPIC/1,7.0/FMTOPIC/-1
 
 PIELIST+30 21.5/FTOPIC/-1,22.0/FTOPIC/0,24.0/FTOPIC/1,22.5/FTOPIC/-1,10.0/FTOPIC/1
-PIELIST+30 21.5/FMTOPIC/-1,22.0/FMTOPIC/0,24.0/FMTOPIC/1,22.5/FMTOPIC/-1,10.0/FMTOPIC/1
+PIELIST+7 21.5/FMTOPIC/-1,22.0/FMTOPIC/0,24.0/FMTOPIC/1,22.5/FMTOPIC/-1,10.0/FMTOPIC/1
 
 PIELIST+30 22.5/FTOPIC/0,23.5/FTOPIC/1,21.0/FTOPIC/-1,25.0/FTOPIC/1,8.0/FTOPIC/-1
-PIELIST+30 22.5/FMTOPIC/0,23.5/FMTOPIC/1,21.0/FMTOPIC/-1,25.0/FMTOPIC/1,8.0/FMTOPIC/-1
+PIELIST+7 22.5/FMTOPIC/0,23.5/FMTOPIC/1,21.0/FMTOPIC/-1,25.0/FMTOPIC/1,8.0/FMTOPIC/-1
 
 #4 SECTORS
 PIELIST+30 24.5/FTOPIC/1,25.5/FTOPIC/-1,23.0/FTOPIC/-1,27.0/FTOPIC/1
-PIELIST+30 24.5/FMTOPIC/1,25.5/FMTOPIC/-1,23.0/FMTOPIC/-1,27.0/FMTOPIC/1
+PIELIST+7 24.5/FMTOPIC/1,25.5/FMTOPIC/-1,23.0/FMTOPIC/-1,27.0/FMTOPIC/1
 
 #3 SECTORS
 PIELIST+30 33.5/FTOPIC/1,31.0/FTOPIC/-1,35.5/FTOPIC/0
-PIELIST+30 33.5/FMTOPIC/1,31.0/FMTOPIC/-1,35.5/FMTOPIC/0
+PIELIST+7 33.5/FMTOPIC/1,31.0/FMTOPIC/-1,35.5/FMTOPIC/0
 
 PIELIST+30 35.0/FTOPIC/-1,33.0/FTOPIC/0,32.0/FTOPIC/1
-PIELIST+30 35.0/FMTOPIC/-1,33.0/FMTOPIC/0,32.0/FMTOPIC/1
+PIELIST+7 35.0/FMTOPIC/-1,33.0/FMTOPIC/0,32.0/FMTOPIC/1
 
 PIELIST+30 34.0/FTOPIC/0,31.0/FTOPIC/-1,35.0/FTOPIC/1
-PIELIST+30 34.0/FMTOPIC/0,31.0/FMTOPIC/-1,35.0/FMTOPIC/1
+PIELIST+7 34.0/FMTOPIC/0,31.0/FMTOPIC/-1,35.0/FMTOPIC/1
 
 OTHER+30 other
 OTHER+30 misc.
@@ -6874,37 +6875,37 @@ FTOPIC	\footnotesize{PIETOPIC}
 FMTOPIC	\footnotesize{MTOPIC}
 
 #6 SECTORS
-PIEFANCYLIST 15.0/COLOUR/FTOPIC/1/NLEN/0/R1/R2/,17.0/COLOUR/FTOPIC/1/1/1/R1/R2/KINK,16.0/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,17.0/COLOUR/FTOPIC/-1/-1/-1/L1/L2/KINK,19.0/COLOUR/FTOPIC/-1/1/-1.5/R1/R2/FKINK,16.0/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK
+PIEFANCYLIST+4 15.0/COLOUR/FTOPIC/1/NLEN/0/R1/R2/,17.0/COLOUR/FTOPIC/1/1/1/R1/R2/KINK,16.0/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,17.0/COLOUR/FTOPIC/-1/-1/-1/L1/L2/KINK,19.0/COLOUR/FTOPIC/-1/1/-1.5/R1/R2/FKINK,16.0/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK
 PIEFANCYLIST 15.0/COLOUR/FMTOPIC/1/NLEN/0/R1/R2/,17.0/COLOUR/FMTOPIC/1/1/1/R1/R2/KINK,16.0/COLOUR/FMTOPIC/1/-NLEN/0/L1/L2/,17.0/COLOUR/FMTOPIC/-1/-1/-1/L1/L2/KINK,19.0/COLOUR/FMTOPIC/-1/1/-1.5/R1/R2/FKINK,16.0/COLOUR/FMTOPIC/-1/1/-1/R1/R2/FKINK
 
 #5 SECTORS
-PIEFANCYLIST 22.0/COLOUR/FTOPIC/0/NLEN/0/R1/R2/,24.0/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,21.0/COLOUR/FTOPIC/1/-1/-1/L1/L2/KINK,8.0/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK,25.0/COLOUR/FTOPIC/-1/0/0/R1/R2/FKINK
+PIEFANCYLIST+4 22.0/COLOUR/FTOPIC/0/NLEN/0/R1/R2/,24.0/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,21.0/COLOUR/FTOPIC/1/-1/-1/L1/L2/KINK,8.0/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK,25.0/COLOUR/FTOPIC/-1/0/0/R1/R2/FKINK
 PIEFANCYLIST 22.0/COLOUR/FMTOPIC/0/NLEN/0/R1/R2/,24.0/COLOUR/FMTOPIC/1/-NLEN/0/L1/L2/,21.0/COLOUR/FMTOPIC/1/-1/-1/L1/L2/KINK,8.0/COLOUR/FMTOPIC/-1/1/-1/R1/R2/FKINK,25.0/COLOUR/FMTOPIC/-1/0/0/R1/R2/FKINK
 
-PIEFANCYLIST 20.5/COLOUR/FTOPIC/0/NLEN/0/R1/R2/,23.5/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,9.0/COLOUR/FTOPIC/1/-1/-0.5/L1/L2/KINK,24.5/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK,22.5/COLOUR/FTOPIC/-1/0/0/R1/R2/FKINK
+PIEFANCYLIST+4 20.5/COLOUR/FTOPIC/0/NLEN/0/R1/R2/,23.5/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,9.0/COLOUR/FTOPIC/1/-1/-0.5/L1/L2/KINK,24.5/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK,22.5/COLOUR/FTOPIC/-1/0/0/R1/R2/FKINK
 PIEFANCYLIST 20.5/COLOUR/FMTOPIC/0/NLEN/0/R1/R2/,23.5/COLOUR/FMTOPIC/1/-NLEN/0/L1/L2/,9.0/COLOUR/FMTOPIC/1/-1/-0.5/L1/L2/KINK,24.5/COLOUR/FMTOPIC/-1/1/-1/R1/R2/FKINK,22.5/COLOUR/FMTOPIC/-1/0/0/R1/R2/FKINK
 
-PIEFANCYLIST 25.0/COLOUR/FTOPIC/0/NLEN/0/R1/R2/,7.0/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,24.0/COLOUR/FTOPIC/1/-1/-0.5/L1/L2/KINK,23.0/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK,21.0/COLOUR/FTOPIC/-1/0/0/R1/R2/FKINK
+PIEFANCYLIST+4 25.0/COLOUR/FTOPIC/0/NLEN/0/R1/R2/,7.0/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,24.0/COLOUR/FTOPIC/1/-1/-0.5/L1/L2/KINK,23.0/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK,21.0/COLOUR/FTOPIC/-1/0/0/R1/R2/FKINK
 PIEFANCYLIST 25.0/COLOUR/FMTOPIC/0/NLEN/0/R1/R2/,7.0/COLOUR/FMTOPIC/1/-NLEN/0/L1/L2/,24.0/COLOUR/FMTOPIC/1/-1/-0.5/L1/L2/KINK,23.0/COLOUR/FMTOPIC/-1/1/-1/R1/R2/FKINK,21.0/COLOUR/FMTOPIC/-1/0/0/R1/R2/FKINK
 
-PIEFANCYLIST 10.0/COLOUR/FTOPIC/0/NLEN/0/R1/R2/,22.0/COLOUR/FTOPIC/1/1/1/R1/R2/KINK,24.0/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,22.5/COLOUR/FTOPIC/-1/-1/-1/L1/L2/KINK,21.5/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK
+PIEFANCYLIST+4 10.0/COLOUR/FTOPIC/0/NLEN/0/R1/R2/,22.0/COLOUR/FTOPIC/1/1/1/R1/R2/KINK,24.0/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,22.5/COLOUR/FTOPIC/-1/-1/-1/L1/L2/KINK,21.5/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK
 PIEFANCYLIST 10.0/COLOUR/FMTOPIC/0/NLEN/0/R1/R2/,22.0/COLOUR/FMTOPIC/1/1/1/R1/R2/KINK,24.0/COLOUR/FMTOPIC/1/-NLEN/0/L1/L2/,22.5/COLOUR/FMTOPIC/-1/-1/-1/L1/L2/KINK,21.5/COLOUR/FMTOPIC/-1/1/-1/R1/R2/FKINK
 
-PIEFANCYLIST 22.5/COLOUR/FTOPIC/0/NLEN/0/R1/R2/,23.5/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,21.0/COLOUR/FTOPIC/-1/0/0/L1/L2/KINK,25.0/COLOUR/FTOPIC/1/1/-2/R1/R2/FKINK,8.0/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK
+PIEFANCYLIST+4 22.5/COLOUR/FTOPIC/0/NLEN/0/R1/R2/,23.5/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,21.0/COLOUR/FTOPIC/-1/0/0/L1/L2/KINK,25.0/COLOUR/FTOPIC/1/1/-2/R1/R2/FKINK,8.0/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK
 PIEFANCYLIST 22.5/COLOUR/FMTOPIC/0/NLEN/0/R1/R2/,23.5/COLOUR/FMTOPIC/1/-NLEN/0/L1/L2/,21.0/COLOUR/FMTOPIC/-1/0/0/L1/L2/KINK,25.0/COLOUR/FMTOPIC/1/1/-2/R1/R2/FKINK,8.0/COLOUR/FMTOPIC/-1/1/-1/R1/R2/FKINK
 
 #4 SECTORS 
-PIEFANCYLIST 24.5/COLOUR/FTOPIC/1/NLEN/0/R1/R2/,25.5/COLOUR/FTOPIC/-1/-NLEN/0/L1/L2/,23/COLOUR/FTOPIC/1/-1/-1/L1/L2/KINK,27/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK
+PIEFANCYLIST+4 24.5/COLOUR/FTOPIC/1/NLEN/0/R1/R2/,25.5/COLOUR/FTOPIC/-1/-NLEN/0/L1/L2/,23/COLOUR/FTOPIC/1/-1/-1/L1/L2/KINK,27/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK
 PIEFANCYLIST 24.5/COLOUR/FMTOPIC/1/NLEN/0/R1/R2/,25.5/COLOUR/FMTOPIC/-1/-NLEN/0/L1/L2/,23/COLOUR/FMTOPIC/1/-1/-1/L1/L2/KINK,27/COLOUR/FMTOPIC/-1/1/-1/R1/R2/FKINK
 
 #3 SECTORS
-PIEFANCYLIST 33.5/COLOUR/FTOPIC/0/NLEN/0/R1/R2/,31.0/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,35.5/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK
+PIEFANCYLIST+4 33.5/COLOUR/FTOPIC/0/NLEN/0/R1/R2/,31.0/COLOUR/FTOPIC/1/-NLEN/0/L1/L2/,35.5/COLOUR/FTOPIC/-1/1/-1/R1/R2/FKINK
 PIEFANCYLIST 33.5/COLOUR/FMTOPIC/0/NLEN/0/R1/R2/,31.0/COLOUR/FMTOPIC/1/-NLEN/0/L1/L2/,35.5/COLOUR/FMTOPIC/-1/1/-1/R1/R2/FKINK
 
-PIEFANCYLIST 35.0/COLOUR/FTOPIC/-1/NLEN/0/R1/R2/,33.0/COLOUR/FTOPIC/0/-NLEN/0/L1/L2/,32.0/COLOUR/FTOPIC/1/1/-1/R1/R2/FKINK
+PIEFANCYLIST+4 35.0/COLOUR/FTOPIC/-1/NLEN/0/R1/R2/,33.0/COLOUR/FTOPIC/0/-NLEN/0/L1/L2/,32.0/COLOUR/FTOPIC/1/1/-1/R1/R2/FKINK
 PIEFANCYLIST 35.0/COLOUR/FMTOPIC/-1/NLEN/0/R1/R2/,33.0/COLOUR/FMTOPIC/0/-NLEN/0/L1/L2/,32.0/COLOUR/FMTOPIC/1/1/-1/R1/R2/FKINK
 
-PIEFANCYLIST 34.0/COLOUR/FTOPIC/0/NLEN/0/R1/R2/,31.0/COLOUR/FTOPIC/-1/-NLEN/0/L1/L2/,35.0/COLOUR/FTOPIC/1/1/-1/R1/R2/FKINK
+PIEFANCYLIST+4 34.0/COLOUR/FTOPIC/0/NLEN/0/R1/R2/,31.0/COLOUR/FTOPIC/-1/-NLEN/0/L1/L2/,35.0/COLOUR/FTOPIC/1/1/-1/R1/R2/FKINK
 PIEFANCYLIST 34.0/COLOUR/FMTOPIC/0/NLEN/0/R1/R2/,31.0/COLOUR/FMTOPIC/-1/-NLEN/0/L1/L2/,35.0/COLOUR/FMTOPIC/1/1/-1/R1/R2/FKINK
 
 COORD 0
