--- a/corprules.in
+++ b/corprules.in
@@ -3816,8 +3816,10 @@ EMID2 monium
 EMID2 benzo
 EMID2 nitr
 
-EMID+5 EMID1EMID2
-EMID EMIDEMID
+EMID+10 EMID1EMID2
+EMID+5   EMID1EMID2EMID1EMID2
+EMID+3   EMID1EMID2EMID1EMID2EMID1EMID2
+EMID   EMID1EMID2EMID1EMID2EMID1EMID2EMID1EMID2
 
 ESUF ate
 ESUF ose
@@ -3875,15 +3877,15 @@ CSEND CMIDO$_{NONZ}$
 CSEND F
 CSEND Cl
 CSEND Br
-CSENDX+3 CSEND
-CSENDX CSEND$^{+}$
-CSENDX CSEND$^{NONZ+}$
-CSENDX CSEND$^{-}$
-CSENDX CSEND$^{NONZ-}$
-CSENDX CSEND$^{\bullet}$
+CSENDX+10 CSEND
+CSENDX+10 CSEND$^{+}$
+CSENDX+10 CSEND$^{NONZ+}$
+CSENDX+10 CSEND$^{-}$
+CSENDX+10 CSEND$^{NONZ-}$
+CSENDX+2 CSEND$^{\bullet}$
 
-CHEMXU+4 CSYMCSENDX
-CHEMXU CHEMXUCHEMXU
+CHEMXU CSYMCSENDX
+CHEMXU CSYMCSENDXCSYMCSENDX
 
 CHEMX CHEMXU
 CHEMX the CDADJ CDES CHEMXU
