--- a/corprules.in
+++ b/corprules.in
@@ -4781,6 +4781,8 @@ LREV+5	ironically
 LREV+5	technically
 LREV+5  generally speaking
 LREV+5  technically speaking
+LREV+5  in a certain sense
+LREV+5  theoretically speaking
 LREV+5	obviously
 LREV	urgently
 LREV	pressingly
