--- a/corprules.in
+++ b/corprules.in
@@ -3856,10 +3856,13 @@ EMID2 benz
 EMID2 graph
 EMID2 sucr
 
+ELINT a
+ELINT o
+
 EMID+10 EMID1EMID2
-EMID+5   EMID1EMID2EMID1EMID2
-EMID+3   EMID1EMID2EMID1EMID2EMID1EMID2
-#EMID   EMID1EMID2EMID1EMID2EMID1EMID2EMID1EMID2
+EMID+5   EMID1EMID2ELEINTEMID1EMID2
+EMID+3   EMID1EMID2ELINTEMID1EMID2ELINTEMID1EMID2
+#EMID   EMID1EMID2ELINTEMID1EMID2ELINTEMID1EMID2ELINTEMID1EMID2
 
 ESUF aldehyde
 ESUF ate
