--- a/corprules.in
+++ b/corprules.in
@@ -8051,6 +8051,11 @@ PREFIXX post
 PREFIXX pro
 PREFIXX trans
 PREFIXX FAMOUS
+PREFIXX techno
+PREFIXX opto
+PREFIXX crypto
+PREFIXX meso
+PREFIXX hydro
 
 PREFIXX multi
 PREFIXX bio
