--- a/corprules.in
+++ b/corprules.in
@@ -2539,6 +2539,8 @@ EXP_ADJ+35		SCI_STATUS_ADJ
 #EXP_ADJ+30		AREAMOD
 EXP_ADJ+70		EXP_TREK
 
+EXP_ADJ+10		hyperspectral
+
 
 EXP_TYPE	EXP_ADJ EXP_TYPE_UM
 EXP_TYPE	EXP_TYPE_UM
@@ -8075,7 +8077,8 @@ PREFIXX tera
 PREFIXX hyper
 PREFIXX hypo
 PREFIXX mega
-
+PREFIXX exo
+PREFIXX endo
 
 PREFIX+40 PREFIXX
 PREFIX \"{u}ber
