--- a/corprules.in
+++ b/corprules.in
@@ -8068,6 +8068,36 @@ PREFIXX	auto
 PREFIXX neo
 PREFIXX meta
 PREFIXX extra
+PREFIXX thermo
+PREFIXX chrono
+PREFIXX faux
+PREFIXX epi
+PREFIXX deca
+PREFIXX fluoro
+PREFIXX geo
+PREFIXX hemi
+PREFIXX hypno
+PREFIXX eco
+PREFIXX econo
+PREFIXX counter
+PREFIXX circum
+PREFIXX demi
+PREFIXX mal
+PREFIXX maxi
+PREFIXX hetero
+PREFIXX homo
+PREFIXX milli
+PREFIXX necro
+PREFIXX neuro
+PREFIXX onco
+PREFIXX pan
+PREFIXX para
+PREFIXX perma
+PREFIXX psycho
+PREFIXX retro
+PREFIXX uni
+PREFIXX tele
+PREFIXX xeno
 
 PREFIXX atto
 PREFIXX femto
