--- a/corprules.in
+++ b/corprules.in
@@ -2237,11 +2237,14 @@ SCI_ANUMBER many
 SCI_ANUMBER few
 SCI_ANUMBER most
 
+THINGS OVERVERBING
+THINGS SCI_VERBION
+
 EVAL_SEC_HYPOTHESIS 	that PROP_OR_MEASUREMENT is MORE_IMPORTANT_THAN PROP_OR_MEASUREMENT when MAXIMIZING EVAL_MEASUREMENT
 
 EVAL_SEC_HYPOTHESIS 	that SCI_THING_HAS actually SCI_PROVE_VERBED DIFFERENT EVAL_MEASUREMENT over time
 
-EVAL_SEC_HYPOTHESIS 	that we can do LITTLE to AFFECT a SCI_SYSTEM's PROP_OR_MEASUREMENT_NO_SYSTEM
+EVAL_SEC_HYPOTHESIS 	that we can do LITTLE THINGS to AFFECT a SCI_SYSTEM's PROP_OR_MEASUREMENT_NO_SYSTEM
 
 EVAL_SEC_HYPOTHESIS	that the OLD_MACHINE of yesteryear actually exhibits better EVAL_MEASUREMENT than today's hardware
 
@@ -3525,7 +3528,7 @@ SCI_BUZZWORD_NOUN+30 discriminators
 SCI_BUZZWORD_NOUN+30 technologies
 SCI_BUZZWORD_NOUN+30 communications
 SCI_BUZZWORD_NOUN+30 algorithms
-SCI_BUZZWORD_NOUN+30 theory
+SCI_BUZZWORD_NOUN+30 theories
 SCI_BUZZWORD_NOUN+30 methodologies
 SCI_BUZZWORD_NOUN+30 systems
 SCI_BUZZWORD_NOUN+30 models
