--- a/corprules.in
+++ b/corprules.in
@@ -2551,7 +2551,7 @@ EXP_TREK		continuum
 EXP_TREK		PREFIXXverse
 
 #EXP_ADJ+1000 `GOOD_ADJ'
-EXP_ADJ+30		`GOOD_ADJ'
+EXP_ADJ+10		GOOD_ADJ
 EXP_ADJ+30		SCI_BUZZWORD_ADJ
 EXP_ADJ+30		SOFTWARE_ADJ
 EXP_ADJ+30		real-time
@@ -6870,8 +6870,8 @@ PIELIST+7 35.0/FMTOPIC/-1,33.0/FMTOPIC/0,32.0/FMTOPIC/1
 PIELIST+30 34.0/FTOPIC/0,31.0/FTOPIC/-1,35.0/FTOPIC/1
 PIELIST+7 34.0/FMTOPIC/0,31.0/FMTOPIC/-1,35.0/FMTOPIC/1
 
-OTHER+30 other
-OTHER+30 misc.
+OTHER+20 other
+OTHER+20 misc.
 OTHER+20 miscellaneous
 OTHER+20 assorted other
 OTHER+20 unidentified
