--- a/corprules.in
+++ b/corprules.in
@@ -7266,7 +7266,7 @@ UNITHEME SCI_VERBION
 UNITHEME SCI_VERBION and SCI_SYSTEM_PL
 UNITHEME SCI_SYSTEM_PL
 UNITHEME SCI_VERBION, CONSTRAINT_TYPEX and SCI_SYSTEM_PL
-UNITHEME SCI_THING_MOD
+UNITHEME SCI_THING_P
 UNITHEME EXP_ADJ SCI_BUZZWORD_NOUN
 
 STREET Street
