--- a/corprules.in
+++ b/corprules.in
@@ -7277,6 +7277,7 @@ STREET Way
 STREET Close
 STREET Place
 STREET Grove
+STREET Square
 
 STNAME GOOD_NOUN
 STNAME GOOD_ADJ
@@ -7296,16 +7297,66 @@ TOWN STNAMEfield
 TOWN STNAMEon
 TOWN STNAMEtown
 TOWN STNAME Beach
+TOWN STNAME City
+TOWN STNAME Province
+TOWN STNAMEpolis
+TOWN STNAMEham
+TOWN STNAMEhurst
+TOWN STNAMEminster
+TOWN STNAMEwark
+TOWN STNAMEwich
+TOWN STNAMEway
+TOWN STNAMEeston
+TOWN STNAMEsted
+TOWN STNAMEley
+TOWN STNAMEford
+TOWN STNAMEmoth
+TOWN STNAMEcourt
+TOWN STNAMEmore
+TOWN STNAMEcoultry
+TOWN STNAMEross
+TOWN STNAME Atholl
+TOWN STNAMEfoyle
+TOWN STNAMEgowrie
+TOWN STNAMEtrae
+TOWN STNAMEalsh
+TOWN STNAMEheim
+TOWN STNAMEitz
+TOWN STNAMEbach
+TOWN STNAMEschlag
+TOWN STNAMEkampf
+TOWN STNAMEdorf
+TOWN STNAMEhausen
+TOWN STNAMEau
+TOWN STNAME Rock
 
-COU USA
-COU Australia
-COU United Kingdom
-COU Canada
-COU India
-COU France
-COU Germany
-COU Italy
-COU Japan
+TOWNAD+1 , GOOD_NOUN
+TOWNAD , UPDOWN DIRN-side
+TOWNAD+10
+
+UPDOWN upper
+UPDOWN lower
+UPDOWN middle
+UPDOWN+8
+DIRN north
+DIRN south
+DIRN east
+DIRN west
+
+METADIRN DIRN
+METADIRN+5 UPDOWN
+METADIRN Port
+METADIRN+5 
+
+COU+50 USA
+COU+50 Australia
+COU+50 United Kingdom
+COU+10 Canada
+COU+10 India
+COU+10 France
+COU+10 Germany
+COU+10 Italy
+COU+10 Japan
 COU Sweden
 COU Russia
 COU Antarctica
@@ -7438,7 +7489,13 @@ COU Oman
 COU Zambia
 COU Zimbabwe
 
-ADDR NONZDIGIT STNAME STREET, TOWN, UPRVARUPRVAR DIGITDIGITDIGITDIGITDIGIT, COU
+ZIP , UPRVARUPRVAR DIGITDIGITDIGITDIGITDIGIT
+ZIP 
+
+CAMPUS \,Campus
+CAMPUS 
+
+ADDR NONZDIGIT STNAME STREET, METADIRN TOWNTOWNADCAMPUSZIP, COU
 
 PUBLISHER Springer
 PUBLISHER Birkh\"auser
