--- a/corprules.in
+++ b/corprules.in
@@ -546,6 +546,7 @@ GENERAL the latest
 GENERAL the coolest
 GENERAL the most RECENT
 GENERAL the most LIT_GOOD
+GENERAL glamorous
 
 OPINION opinion
 OPINION belief
@@ -1487,26 +1488,30 @@ RELWORK_SUBSEC_LATEX_HEADER	\subsection{The Effects of SCI_THING}
 
 RELWORK_SUBSEC_LATEX_HEADER	\subsection{Dependence on SCI_THING}
 
-RELWORK_SUBSEC_LATEX_HEADER	\subsection{Reciprocal SCI_THING}
+RELWORK_SUBSEC_LATEX_HEADER	\subsection{Reciprocal SCI_THING_P}
 
 RELWORK_SUBSEC_LATEX_HEADER	\subsection{Extending SYSNAME}
 
 RELWORK_SUBSEC_LATEX_HEADER	\subsection{SCI_THING in SYSNAME}
 
-RELWORK_SUBSEC_LATEX_HEADER	\subsection{Emergent SCI_THING}
+RELWORK_SUBSEC_LATEX_HEADER	\subsection{Emergent SCI_THING_P}
 
 RELWORK_SUBSEC_LATEX_HEADER	\subsection{Emergent SYSNAME}
 
-RELWORK_SUBSEC_LATEX_HEADER	\subsection{Finite SCI_THING}
+RELWORK_SUBSEC_LATEX_HEADER	\subsection{Finite SCI_THING_P}
 
 RELWORK_SUBSEC_LATEX_HEADER	\subsection{Long-term Strategies for SCI_THING}
 
 RELWORK_SUBSEC_LATEX_HEADER	\subsection{SCI_IMPORTANTV Considerations for SCI_THING}
 
+RELWORK_SUBSEC_LATEX_HEADER+5	\subsection{NETWORK_TYPE SCI_THING_P}
+
+RELWORK_SUBSEC_LATEX_HEADER+5	\subsection{EXP_ADJ SCI_THING_P}
+
 
 RELWORK_SUBSEC_LATEX_HEADER	\subsection{SCI_USING SCI_THING with SYSNAME}
 
-RELWORK_SUBSEC_LATEX_HEADER	\subsection{Corresponding SCI_THING}
+RELWORK_SUBSEC_LATEX_HEADER	\subsection{Corresponding SCI_THING_P}
 
 SCI_RELWORK+10 {
 
@@ -3814,6 +3819,7 @@ CDES aggregate
 CDES amalgamation
 CDES emulsion
 CDES amalgam
+CDES polymer
 CDES PREFIXX-alloy
 CDES composite
 CDES conglomerate
@@ -3824,6 +3830,7 @@ CDESYX biochemically
 CDESYX stoichiometrically
 CDESYX structurally
 CDESYX molecularly
+CDESYX characteristically
 
 CDESY+10 CDESYX
 CDESY+10 CDESYX speaking
@@ -3918,6 +3925,7 @@ EMID2 ket
 EMID2 benz
 EMID2 graph
 EMID2 sucr
+EMID2 polymer
 
 ELINT a
 ELINT o
@@ -3927,6 +3935,7 @@ EMID+5   EMID1EMID2ELINT-EMID1EMID2
 EMID+3   EMID1EMID2ELINT-EMID1EMID2ELINT-EMID1EMID2
 #EMID   EMID1EMID2ELINT-EMID1EMID2ELINT-EMID1EMID2ELINT-EMID1EMID2
 
+ESUF ase
 ESUF aldehyde
 ESUF ate
 ESUF ose
