--- a/corprules.in
+++ b/corprules.in
@@ -430,7 +430,7 @@ SCI_IPF_ORG we proceed as follows:
 SCI_IPF_ORG the rest of this document proceeds as follows:
 SCI_IPF_ORG the roadmap of this paper is as follows:
 
-SCI_IPF_FIRST LIT_FIRST we motivate the need for SCI_THING_MOD 
+SCI_IPF_FIRST LIT_FIRST we ANALYZE the NEED for SCI_THING_MOD XXX
 
 SCI_IPF_MID LIT_MIDDLE_TWO SCI_IPF_MID_B XXX
 SCI_IPF_MID LIT_MIDDLE SCI_IPF_MID_B XXX LIT_MIDDLE_3 SCI_IPF_MID_B XXX
@@ -1766,7 +1766,7 @@ RELWORK_MID_X SCI_OVERALL_THESIS_THING RELWORK_CITATION proposed by SCI_BY_WHO f
 RELWORK_MID_X the SCI_STATUS_ADJ SCI_SYSTEM SCI_BY_WHO_SOMETIMES does not SCI_SYS_VERB SCI_GENERIC_NOUN as well as our SCI_APPROACH
 RELWORK_MID_X unlike SCI_ANUMBER RELATED SCI_APPROACH_PL RELWORK_CITATION, we do not attempt to SCI_SYS_VERB or SCI_SYS_VERB SCI_GENERIC_NOUN
 RELWORK_MID_X instead of SCI_VERBING SCI_GENERIC_NOUN RELWORK_CITATION, we SCI_SOLVE_CLAUSE simply by SCI_VERBING SCI_GENERIC_NOUN
-RELWORK_MID_X the choice of SCI_THING_MOD in CITATION differs from ours in that we SCI_VERB only SCI_ADJ SCI_BUZZWORD_NOUN in SCI_OUR_SYSTEM
+RELWORK_MID_X the choice of SCI_THING_MOD in CITATION_DEF differs from ours in that we SCI_VERB only SCI_ADJ SCI_BUZZWORD_NOUN in SCI_OUR_SYSTEM
 RELWORK_MID_X SCI_BY_WHO RELWORK_CITATION originally articulated the need for SCI_GENERIC_NOUN
 RELWORK_MID_X the original approach to this SCI_PROBLEM SCI_BY_WHO_SOMETIMES was SCI_REACTION; LIT_REVERSAL, WHAT did not completely SCI_SOLVE_CLAUSE
 RELWORK_MID_X SCI_BY_WHO RELWORK_CITATION suggested a scheme for SCI_VERBING SCI_GENERIC_NOUN, but did not fully VIEW the FINDINGs of SCI_GENERIC_NOUN at the time
@@ -2759,6 +2759,11 @@ EVAL_HARDWARE_INTRO	one must UNDERSTAND our network configuration to grasp the g
 REQUIRED	mandated
 REQUIRED	required
 REQUIRED	necessary
+
+NEED need
+NEED requirement
+NEED necessity
+NEED expectation
 
 EVAL_SEC_BODY_P_REST	
 EVAL_SEC_BODY_P_REST  LIT_LAST_OR_MIDDLE EVAL_MOD EVAL_MOD_XXX
@@ -6826,7 +6831,7 @@ PIETOPIC+1 SCI_FIELD
 PIETOPIC+1   EXP_ADJ SCI_MODEL_TYPE_P
 PIETOPIC+1   CONSTRAINT_TYPE
 PIETOPIC OTHER
-PIETOPIC SCI_COUNTRY_MAYBE SCI_THING
+PIETOPIC SCI_COUNTRY_MAYBE SCI_THING_P
 
 MTOPIC MONEH
 
@@ -7096,6 +7101,8 @@ CITATION_SINGLE cite:CITATIONLABEL#
 
 CITATION_SINGLEINMULTI cite:CITATIONLABEL+
 CITATION \cite{CITATION_SINGLE}
+CITATION_DEF \cite{CITATION_SINGLE}
+
 CITATION_MULTI+3 \cite{CITATION_SINGLEINMULTI}
 CITATION_MULTI+10 \cite{CITATION_SINGLEINMULTI, CITATION_SINGLEINMULTI}
 CITATION_MULTI+8 \cite{CITATION_SINGLEINMULTI, CITATION_SINGLEINMULTI, CITATION_SINGLEINMULTI}
